<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@color/colorTitle"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/title_plan"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="9sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPlanFlat"
            android:layout_width="301dp"
            android:layout_height="203dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img_kv_1" />

        <ImageView
            android:id="@+id/imgPlanFloor"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img_floor2" />

    </FrameLayout>

    <TextView
        android:id="@+id/titleCountRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/one_bedroom"
        android:textColor="@color/colorText"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="27dp"
                android:background="@drawable/bottom_border_solid"
                android:text="8 800 000 руб."
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korpus"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_border_dot" />

                <TextView
                    android:id="@+id/textCorpus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_flat"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_border_dot" />

                <TextView
                    android:id="@+id/textNumberFlats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="174"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_floor"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_border_dot" />

                <TextView
                    android:id="@+id/textFloor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/square"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_border_dot" />

                <TextView
                    android:id="@+id/textSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="152"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/bottom_border_dot" />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="В продаже"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnLast"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/btn_last"
                android:onClick="btnControllingPlan"/>

            <ImageView
                android:id="@+id/btnNext"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/btn_next"
                android:onClick="btnControllingPlan"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
